# ai-job-application-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
agentic/: agent.py  memory.py  nodes.py  prompts.py  state.py  tools.py
agentic/telegram/: __init__.py  client.py  config.py  formatter.py  prompt.py
scraper/: easy_apply.py  helpers.py  jobs.py  login.py  main.py  pagination.py  session.py
scripts/: smoke_test_telegram.py
