[project]
name = "automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pypdf>=6.11.0",
    "pytest-playwright>=0.7.2",
    "python-dotenv>=1.2.2",
    # Lets stdlib urllib use the macOS/Windows system trust store so corporate
    # VPN / antivirus / Zscaler root CAs work without bypassing TLS verification.
    # Required by agentic/telegram/client.py.
    "truststore>=0.10.0",
]
